--- a/model-validator/build.gradle
+++ b/model-validator/build.gradle
@@ -7,3 +7,12 @@ java {
     sourceCompatibility = JavaVersion.VERSION_17
     targetCompatibility = JavaVersion.VERSION_17
 }
+
+kotlin {
+    jvmToolchain(17)
+}
+
+dependencies {
+    //Kotlin 反射
+    implementation 'org.jetbrains.kotlin:kotlin-reflect'
+}
